# mini_modelvault

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
mini_modelvault/: __init__.py  main.py
mini_modelvault/logger/: __init__.py  logger.py
mini_modelvault/observability/: __init__.py  gpu_monitor.py  health.py
mini_modelvault/router/: __init__.py  router.py
mini_modelvault/services/: __init__.py  cli.py  http_server.py  inference_service.py  interactive_session.py
mini_modelvault/utils/: __init__.py  image_handler.py  model_check.py  spinner_handler.py
test/cli/: test_prompts.txt
test/http/: curl.txt
test/http/postman/: mini_modelvault.postman_collection.json
