[project]
name = "mini-modelvault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.8",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.3",
    "mcp>=1.12.0",
    "typer>=0.16.0",
]
